test/org/midica/testfiles/failing/pattern-inside-function.midica
INCLUDE inc/instruments.midica

FUNCTION
	0 c /4
	PATTERN
		0 /4
	END
END

